<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainActivityContainer"
    tools:context="com.commonsware.listsamples.MainActivity">

    <Button
        android:onClick="onClick"
        android:tag=".selection.ListActivity"
        style="@style/MainButton"
        android:text="@string/activity_list" />

    <Button
        style="@style/MainButton"
        android:onClick="onClick"
        android:tag=".selection.CheckListActivity"
        android:text="@string/activity_check_list" />

    <Button
        style="@style/MainButton"
        android:onClick="onClick"
        android:tag=".selection.SpinnerActivity"
        android:text="@string/activity_spinner" />

    <Button
        style="@style/MainButton"
        android:onClick="onClick"
        android:tag=".selection.GridActivity"
        android:text="@string/activity_grid" />

    <Button
        style="@style/MainButton"
        android:onClick="onClick"
        android:tag=".selection.AutoCompleteActivity"
        android:text="@string/activity_auto_complete" />

    <Button
        style="@style/MainButton"
        android:onClick="onClick"
        android:tag=".selection.CustomizedAdapterActivity"
        android:text="@string/activity_customized_adapter" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:tag=".selection.ViewHolderActivity"
        android:text="@string/activity_view_holder" />

</LinearLayout>
